[package]
authors = ["Alex Eagleson <alexeagleson@gmail.com>"]
description = "A library for handling position on a 2D grid. Intended for use in game development."
edition = "2021"
homepage = "https://github.com/alexeagleson"
license = "MIT OR Apache-2.0"
name = "ae-position"
readme = "README.md"
repository = "https://github.com/alexeagleson/ae-position"
rust-version = "1.65"
version = "0.1.1"

[dependencies]
ae-direction = "0.1.1"
serde = {version = "1.0.140", features = ["derive"]}
serde_json = "1.0.82"
